# enc

./: README.md
Rust/: README.md
Rust/VOTP/: Cargo.toml
Rust/aes-group/: readme.md
Rust/aes-group/all modes/aes-cbc/: Cargo.toml
Rust/aes-group/all modes/aes-cbc/src/: main.rs
Rust/aes-group/all modes/aes-cfb/: Cargo.toml
Rust/aes-group/all modes/aes-cfb/src/: main.rs
Rust/aes-group/all modes/aes-ctr/: Cargo.toml
Rust/aes-group/all modes/aes-ctr/src/: main.rs
Rust/aes-group/all modes/aes-ecb/: Cargo.toml
Rust/aes-group/all modes/aes-ecb/src/: main.rs
Rust/aes-group/all modes/aes-gcm/: Cargo.toml
Rust/aes-group/all modes/aes-gcm-siv/: Cargo.toml
Rust/aes-group/all modes/aes-gcm/src/: main.rs
Rust/aes-group/all modes/aes-xts/: Cargo.toml
Rust/aes-group/all modes/ofb/: Cargo.toml
Rust/aes-group/all modes/pure-rust/: Cargo.toml
Rust/aes-group/securefile/: Cargo.toml
Rust/aes-group/securefile/docs/: aes.html
Rust/aes-group/securefile/src/: main.rs
Rust/aes-group/securepass/: Cargo.toml
Rust/aes-group/securepass/docs/: aes.html
Rust/aes-group/securepass/src/: main.rs
Rust/aes-group/streamcrypt/: Cargo.toml  readme.md
Rust/aes-group/streamcrypt/src/: main.rs
Rust/aes-stream/: Cargo.toml  readme.md
Rust/aes-stream/src/: main.rs
Rust/aicrypt-suite/: Cargo.toml
Rust/aicrypt-suite/aikey/: Cargo.toml
Rust/aicrypt-suite/aikey/src/: main.rs
Rust/aicrypt-suite/aipas/: Cargo.toml
Rust/aicrypt-suite/aipas/src/: main.rs
Rust/chacha20-group/filecrypt/: Cargo.toml  readme.md
Rust/chacha20-group/filecrypt/src/: main.rs
Rust/fs/: Cargo.toml  readme.md
Rust/fs/src/: args.rs  encrypt.rs  files.rs  main.rs
Rust/keygen-group/keygen1/: Cargo.toml
Rust/keygen-group/keygen1/docs/: readme.html
Rust/keygen-group/keygen1/src/: cli.rs  entropy.rs  main.rs  modes.rs  utils.rs
Rust/keygen-group/keygen8/: Cargo.toml
Rust/keygen-group/keygen8/src/: main.rs
Rust/linux-group/basic/: Cargo.toml  readme.md
Rust/linux-group/basic/src/: main.rs
Rust/linux-group/basic1/: Cargo.toml  readme.md
Rust/linux-group/basic1/src/: main.rs
Rust/new-group/a/: Cargo.toml  readme.md
Rust/new-group/a/audits/: audit.html  audit1.html
Rust/new-group/a/src/: main.rs
Rust/orbit256-main/orbit256-main/: Cargo.toml  README.md
Rust/orbit256-main/orbit256-main/src/: main.rs
Rust/otp-group/OTP/: Cargo.toml  readthis.html
Rust/otp-group/OTP1/: Cargo.toml  readme.md
Rust/otp-group/OTP1/src/: main.rs
Rust/otp-group/stars/keygen/: Cargo.toml  readme.md
Rust/otp-group/stars/xor/: Cargo.toml
Rust/overwrite/aes/: Cargo.toml  readme.md
Rust/overwrite/aes/src/: main.rs
Rust/paranoid-group/: readme.md
Rust/paranoid-group/paes/: Cargo.toml
Rust/paranoid-group/paes/src/: main.rs
Rust/paranoid-group/pcam/: Cargo.toml
Rust/paranoid-group/pcam/src/: main.rs
Rust/paranoid-group/pkuz/: Cargo.toml
Rust/paranoid-group/pkuz/src/: main.rs
Rust/paranoid-group/pser/: Cargo.toml
Rust/paranoid-group/pser/src/: main.rs
Rust/paranoid-group/pthr/: Cargo.toml
Rust/paranoid-group/pthr/src/: main.rs
Rust/paranoid-group/pxch/: Cargo.toml
Rust/paranoid-group/pxch/src/: main.rs
Rust/prage/: COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  readme.md
Rust/prage/audits/: audit1.html
Rust/prage/src/: main.rs
Rust/rc/: Cargo.toml  readme.md
Rust/rc/src/: main.rs
Rust/secure/src/: aes.rs  main.rs
Rust/serpent-group/serpent/: Cargo.toml
Rust/serpent-group/serpent/src/: main.rs
Rust/serpent-group/serpent1/: Cargo.toml
Rust/serpent-group/serpent1/docs/: serpent.html
Rust/serpent-group/serpent1/src/: main.rs
Rust/serpent-group/serpent2/: Cargo.toml  readme.md
Rust/serpent-group/serpent2/src/: main.rs
Rust/streamcrypt/: Cargo.toml
Rust/streamcrypt/docs/: readme.html
Rust/streamcrypt/src/: main.rs
Rust/threefish/: readme.md
Rust/threefish-group/threefish-1024/: Cargo.toml
Rust/threefish-group/threefish-1024/docs/: threefish1024.html
Rust/threefish-group/threefish-1024/src/: main.rs
Rust/threefish-group/threefish-1024A/: Cargo.toml
Rust/threefish-group/threefish-1024A/src/: main.rs
Rust/threefish-group/threefish-1024A1/docs/: README.html  key.key
Rust/threefish-group/threefish-1024A2/docs/: threefish_review.html
Rust/threefish-group/threefish-1024A2/src/: main.rs
Rust/threefish-group/threefish512/: Cargo.toml
Rust/threefish-group/threefish512/docs/: threefish512.html
Rust/threefish-group/threefish512/src/: main.rs
Rust/threefish/docs/: WHY_1024_BITS.html  readthis.html
Rust/threefish/src/: main.rs
Rust/toy-group/: readme.md
Rust/toy-group/byte-sub/: Cargo.toml
Rust/toy-group/byte-sub/src/: main.rs
Rust/toy-group/byteRotate/: Cargo.toml
Rust/toy-group/byteRotate/src/: main.rs
Rust/toy-group/caesar/src/: main.rs
Rust/toy-group/feistel-network/: Cargo.toml
Rust/toy-group/feistel-network/src/: main.rs
Rust/toy-group/rc4/: Cargo.toml
Rust/toy-group/rc4/src/: main.rs
Rust/toy-group/tea/: Cargo.toml
Rust/toy-group/tea/src/: main.rs
Rust/toy-group/xor/src/: main.rs
Rust/utils/sha3-512/: readme.md
enc1/OTP/: readme.md
enc1/OTP/src/: main.rs
enc1/VOTP/docs/: readthis.html
enc1/VOTP/src/: error.rs  key.rs  main.rs
enc1/aes/: Cargo.toml  readme.md
enc1/aes/src/: main.rs
enc1/key-gen/: Cargo.toml  readme.md
enc1/key-gen/src/: main.rs
enc1/orbit256/: Cargo.toml  readme.md
enc1/orbit256/src/: main.rs
enc1/secure/: Cargo.toml
enc1/secure/docs/: readthis.html
enc1/secure/src/: key.rs
enc1/threefish/: Cargo.toml
enc1/xcha/: Cargo.toml
enc1/xcha/src/: main.rs
zig/: README.md
zig/aes-group/: README.md
zig/aes-group/aes001/: aes.zig  readme.md
zig/aes-group/aes002/: aes.zig  readme.md
zig/aes-group/aes003/: aes.zig  readme.md
zig/aes-group/aes004/: aes.zig  readme.md
zig/otp-group/otp1/: otp.zig  readme.md
zig/otp-group/otp2/: otp.zig  readme.md
zig/securefile-group/: readme.md  securefile.zig
zig/windows-gui/: readme.md  securefile.zig
zig/zig-docs/: start.html  zig-build-guide.html  zig-help.html
zig/zig-keygen/: keygen.zig  readme.md
(+6 files in other folders)
