[package]
name        = "secure"
version     = "2.1.0"
edition     = "2021"
authors     = ["You <you@example.com>"]
description = "Versatile one‑time‑pad XOR utility, deterministic key generator, and AES‑GCM‑SIV encryptor"
license     = "MIT OR Apache-2.0"

# ──────────────────────────── Dependencies ────────────────────────────────
[dependencies]
# Core CLI / ergonomics
clap    = { version = "4.5", features = ["derive"] }
anyhow  = "1.0"

# Progress bar
indicatif = { version = "0.17", optional = true }

# Atomic temp‑file handling, locking, timestamps
tempfile = "3"
fs2      = "0.4"
filetime = "0.2"

# Security hygiene
zeroize  = "1"

# Optional extras for OTP verifier & Unix xattrs
sha2  = { version = "0.10", optional = true, default-features = false }
atty  = { version = "0.2",  optional = true }
xattr = { version = "1",    optional = true }               # Unix‑only ⇒ not in default set

# Deterministic key generator
argon2      = { version = "0.5",  optional = true }          # default features enabled
base64      = { version = "0.22", optional = true }
blake3      = { version = "1.5",  optional = true }
rand        = { version = "0.8",  optional = true }          # default features include OsRng
rand_chacha = { version = "0.3",  optional = true }
rpassword   = { version = "7",    optional = true }
subtle      = { version = "2.5",  optional = true }

# AES‑256‑GCM‑SIV authenticated encryption
aes-gcm-siv = { version = "0.11.1", optional = true }

# ──────────────────────────── Feature matrix ──────────────────────────────
[features]
# Cross‑platform default build (xattrs kept optional for Windows)
default = ["verify", "keygen", "progress", "aes"]

verify   = ["sha2", "atty"]
xattrs   = ["xattr"]

keygen   = [
  "argon2",
  "base64",
  "blake3",
  "rand",
  "rand_chacha",
  "rpassword",
  "subtle",
]

progress = ["indicatif"]

aes      = [
  "aes-gcm-siv",
  "rand"            # RNG needed for nonce generation
]

[workspace]
resolver = "2"
