[package]
name        = "xcp"
version     = "1.0.0"
edition     = "2021"

[dependencies]
# XChaCha20‑Poly1305 is built‑in; no extra feature flag needed
chacha20poly1305 = "0.10.1"

rand_core  = { version = "0.6", features = ["std"] }
zeroize    = "1.7"
anyhow     = "1.0"
clap       = { version = "4.5", features = ["derive"] }
