[package]
name = "orbit-256"
version = "0.1.0"
edition = "2021"
authors = ["<your name or handle>"]
license = "MIT"

[dependencies]
sha3 = "0.10"        # for SHA3‑256 key derivation
clap = { version = "4.5", features = ["derive"] } # CLI parsing
hex = "0.4"          # optional – pretty hex key display
