[package]
name = "serpent2"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
argon2 = { version = "0.5", features = ["password-hash"] }
serpent = "0.5.1"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rpassword = "7.2"
secrecy = "0.8"
env_logger = "0.10"
log = "0.4"